build: docker-compose / dockerfiles updated